<resources>
    <string name="app_name">Zunes</string>
    <string name="Title">Zunes</string>
    <string name="make_new_post">Make new post</string>
    <string name="start_by_searching_for_a_song_you_like">Start by searching for a song you like</string>
    <string name="instructions2">Next, say something about this song</string>
    <string name="write_something">Write something</string>
    <string name="publish_post">Publish post</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="todo">TODO</string>
    <string name="songinfo">songInfo</string>
    <string name="username">userName</string>
    <string name="albumcover">albumcover</string>
    <string name="description">Description</string>
</resources>